--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,12 +40,7 @@ body {
   border-radius: 10px;
   padding: 16px 32px;
   font-weight: 800;
-  font-size: 2rem;
-  margin-top: auto;
-}
-
-.comprar {
-  width: 100%;
+  font-size: 1.5rem;
 }
 
 .postButton {
@@ -85,6 +80,15 @@ body {
   border-bottom: 2px solid rgba(178, 178, 178, 0.1);
   padding: 0 0 40px 0;
   position: relative;
+}
+
+@media screen and (max-width: 640px) {
+  html {
+    font-size: 14px;
+  }
+  .container-cart {
+    grid-template-columns: 1fr;
+  }
 }
 
 .image-cart{
